--- a/codes/train_dev_combine.ipynb
+++ b/codes/train_dev_combine.ipynb
@@ -157,16 +157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/saquib/anaconda3/envs/tensorflow/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:2857: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n"
+     ]
+    }
+   ],
    "source": [
-    "classifier.compile(optimizer = Adam(epsilon = 0.01,lr = 0.01), loss = 'categorical_crossentropy', metrics = ['accuracy'])"
+    "classifier.compile(optimizer = 'adadelta', loss = 'categorical_crossentropy', metrics = ['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,58 +288,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scaling the data\n",
+      "Epoch-0\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9993 - acc: 0.0473 - val_loss: 2.9963 - val_acc: 0.0464\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 248s 111ms/step - loss: 2.9986 - acc: 0.0446 - val_loss: 2.9976 - val_acc: 0.0518\n",
+      "Epoch-1\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 208s 93ms/step - loss: 2.9974 - acc: 0.0482 - val_loss: 2.9975 - val_acc: 0.0357\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 217s 97ms/step - loss: 2.9974 - acc: 0.0496 - val_loss: 2.9962 - val_acc: 0.0607\n",
+      "Epoch-2\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 205s 92ms/step - loss: 2.9914 - acc: 0.0585 - val_loss: 2.9849 - val_acc: 0.0679\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 219s 98ms/step - loss: 2.9963 - acc: 0.0513 - val_loss: 2.9965 - val_acc: 0.0446\n",
+      "Epoch-3\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9685 - acc: 0.0674 - val_loss: 3.0047 - val_acc: 0.0661\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 222s 99ms/step - loss: 2.9961 - acc: 0.0563 - val_loss: 2.9968 - val_acc: 0.0500\n",
+      "Epoch-4\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 291s 130ms/step - loss: 2.9636 - acc: 0.0670 - val_loss: 2.9436 - val_acc: 0.0893\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 253s 113ms/step - loss: 2.9961 - acc: 0.0513 - val_loss: 2.9965 - val_acc: 0.0375\n",
+      "Epoch-5\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 221s 99ms/step - loss: 2.9462 - acc: 0.0759 - val_loss: 2.9332 - val_acc: 0.0964\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 250s 111ms/step - loss: 2.9963 - acc: 0.0473 - val_loss: 2.9959 - val_acc: 0.0536\n",
+      "Epoch-6\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 210s 94ms/step - loss: 2.9372 - acc: 0.0737 - val_loss: 2.9317 - val_acc: 0.0893\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 239s 107ms/step - loss: 2.9961 - acc: 0.0482 - val_loss: 2.9979 - val_acc: 0.0464\n",
+      "Epoch-7\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 214s 95ms/step - loss: 2.9281 - acc: 0.0804 - val_loss: 2.9118 - val_acc: 0.0821\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 241s 108ms/step - loss: 2.9963 - acc: 0.0397 - val_loss: 2.9961 - val_acc: 0.0518\n",
+      "Epoch-8\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9227 - acc: 0.0804 - val_loss: 2.9001 - val_acc: 0.0875\n",
-      "Scaling the data\n",
+      "2240/2240 [==============================] - 227s 101ms/step - loss: 2.9963 - acc: 0.0482 - val_loss: 2.9959 - val_acc: 0.0446\n",
+      "Epoch-9\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9164 - acc: 0.0719 - val_loss: 2.9038 - val_acc: 0.0946\n"
+      "2240/2240 [==============================] - 223s 100ms/step - loss: 2.9957 - acc: 0.0567 - val_loss: 2.9963 - val_acc: 0.0589\n",
+      "Epoch-10\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 242s 108ms/step - loss: 2.9962 - acc: 0.0540 - val_loss: 2.9962 - val_acc: 0.0482\n",
+      "Epoch-11\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 228s 102ms/step - loss: 2.9955 - acc: 0.0594 - val_loss: 2.9965 - val_acc: 0.0536\n",
+      "Epoch-12\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 244s 109ms/step - loss: 2.9951 - acc: 0.0580 - val_loss: 2.9955 - val_acc: 0.0446\n",
+      "Epoch-13\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 228s 102ms/step - loss: 2.9945 - acc: 0.0612 - val_loss: 2.9960 - val_acc: 0.0732\n",
+      "Epoch-14\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 216s 96ms/step - loss: 2.9948 - acc: 0.0616 - val_loss: 2.9928 - val_acc: 0.0643\n",
+      "Epoch-15\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 225s 100ms/step - loss: 2.9933 - acc: 0.0705 - val_loss: 2.9944 - val_acc: 0.0625\n",
+      "Epoch-16\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 227s 101ms/step - loss: 2.9911 - acc: 0.0647 - val_loss: 2.9923 - val_acc: 0.0643\n",
+      "Epoch-17\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 228s 102ms/step - loss: 2.9911 - acc: 0.0692 - val_loss: 2.9929 - val_acc: 0.0643\n",
+      "Epoch-18\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      " 960/2240 [===========>..................] - ETA: 1:58 - loss: 2.9915 - acc: 0.0604"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
+    "for i in range(20):\n",
     "    start(i)"
    ]
   },
