--- a/codes/1_rmsprop.ipynb
+++ b/codes/1_rmsprop.ipynb
@@ -123,7 +123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
