--- a/codes/2_adam.ipynb
+++ b/codes/2_adam.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,91 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\HarshGupta\\\\ml\\\\sem 6 projects\\\\LipNet\\\\Dataset\\\\Train'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "im = np.array(Image.open('image.jpg'))\n",
-    "\n",
-    "plt.imshow(im)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'DirectoryIterator' and 'DirectoryIterator'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-ab909b16920e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_set\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_set\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtest_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'DirectoryIterator' and 'DirectoryIterator'"
-     ]
-    }
-   ],
-   "source": [
-    "train_set = train_set + test_set"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "316s - loss: 0.5255 - acc: 0.8448 - val_loss: 3.9840 - val_acc: 0.3558\n",
-      "Epoch 2/5\n",
-      "314s - loss: 0.0685 - acc: 0.9777 - val_loss: 5.7270 - val_acc: 0.3343\n",
-      "Epoch 3/5\n",
-      "313s - loss: 0.0491 - acc: 0.9833 - val_loss: 3.9664 - val_acc: 0.4850\n",
-      "Epoch 4/5\n",
-      "313s - loss: 0.0288 - acc: 0.9909 - val_loss: 3.2779 - val_acc: 0.5100\n",
-      "Epoch 5/5\n",
-      "313s - loss: 0.0197 - acc: 0.9934 - val_loss: 3.7059 - val_acc: 0.4595\n"
+      "Epoch 1/10\n"
      ]
     }
    ],
    "source": [
-    "history = classifier.fit_generator(train_set,steps_per_epoch=2600,epochs=5,validation_data=test_set,validation_steps=200,callbacks=[csv],verbose=2)"
+    "history = classifier.fit_generator(train_set,steps_per_epoch=2600,epochs=10,validation_data=test_set,validation_steps=200,callbacks=[csv],verbose=2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:tensorflow-gpu]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tensorflow-gpu-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -193,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
