--- a/codes/2_adam.ipynb
+++ b/codes/2_adam.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dhruv\\Anaconda3\\envs\\tensorflow-gpu\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,19 +99,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/10\n",
+      " - 328s - loss: 0.4510 - acc: 0.8691 - val_loss: 2.5181 - val_acc: 0.4604\n",
+      "Epoch 2/10\n",
+      " - 322s - loss: 0.0494 - acc: 0.9853 - val_loss: 4.2204 - val_acc: 0.2989\n",
+      "Epoch 3/10\n",
+      " - 322s - loss: 0.0485 - acc: 0.9842 - val_loss: 4.3837 - val_acc: 0.3792\n",
+      "Epoch 4/10\n",
+      " - 320s - loss: 0.0260 - acc: 0.9919 - val_loss: 3.4473 - val_acc: 0.4846\n",
+      "Epoch 5/10\n",
+      " - 320s - loss: 0.0241 - acc: 0.9917 - val_loss: 3.4526 - val_acc: 0.4356\n",
+      "Epoch 6/10\n",
+      " - 321s - loss: 0.0187 - acc: 0.9939 - val_loss: 3.9791 - val_acc: 0.4853\n",
+      "Epoch 7/10\n",
+      " - 321s - loss: 0.0262 - acc: 0.9915 - val_loss: 5.8566 - val_acc: 0.2898\n",
+      "Epoch 8/10\n",
+      " - 322s - loss: 0.0198 - acc: 0.9934 - val_loss: 5.3787 - val_acc: 0.4108\n",
+      "Epoch 9/10\n",
+      " - 321s - loss: 0.0226 - acc: 0.9926 - val_loss: 5.9935 - val_acc: 0.3434\n",
+      "Epoch 10/10\n",
+      " - 320s - loss: 0.0106 - acc: 0.9965 - val_loss: 4.0006 - val_acc: 0.4797\n"
      ]
     }
    ],
    "source": [
     "history = classifier.fit_generator(train_set,steps_per_epoch=2600,epochs=10,validation_data=test_set,validation_steps=200,callbacks=[csv],verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier.save(\"2_adam.h5\")"
    ]
   }
  ],
