--- a/codes/train_dev_combine.ipynb
+++ b/codes/train_dev_combine.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,11 @@
       "Epoch-18\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      " 960/2240 [===========>..................] - ETA: 1:58 - loss: 2.9915 - acc: 0.0604"
+      "2240/2240 [==============================] - 215s 96ms/step - loss: 2.9898 - acc: 0.0670 - val_loss: 2.9828 - val_acc: 0.0625\n",
+      "Epoch-19\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9887 - acc: 0.0696 - val_loss: 2.9847 - val_acc: 0.0768\n"
      ]
     }
    ],
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -391,43 +395,43 @@
       "Epoch-0\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.8915 - acc: 0.0830 - val_loss: 2.8603 - val_acc: 0.0964\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9860 - acc: 0.0692 - val_loss: 2.9845 - val_acc: 0.0732\n",
       "Epoch-1\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 207s 92ms/step - loss: 2.8833 - acc: 0.0920 - val_loss: 2.8639 - val_acc: 0.1125\n",
+      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9869 - acc: 0.0647 - val_loss: 2.9762 - val_acc: 0.0804\n",
       "Epoch-2\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 208s 93ms/step - loss: 2.8841 - acc: 0.0879 - val_loss: 2.8497 - val_acc: 0.0839\n",
+      "2240/2240 [==============================] - 205s 92ms/step - loss: 2.9835 - acc: 0.0629 - val_loss: 2.9873 - val_acc: 0.0661\n",
       "Epoch-3\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.8855 - acc: 0.0821 - val_loss: 2.8406 - val_acc: 0.1179\n",
+      "2240/2240 [==============================] - 210s 94ms/step - loss: 2.9767 - acc: 0.0728 - val_loss: 2.9865 - val_acc: 0.0500\n",
       "Epoch-4\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 233s 104ms/step - loss: 2.8626 - acc: 0.1022 - val_loss: 2.8730 - val_acc: 0.0911\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9805 - acc: 0.0687 - val_loss: 2.9812 - val_acc: 0.0875\n",
       "Epoch-5\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 208s 93ms/step - loss: 2.8620 - acc: 0.0942 - val_loss: 2.8952 - val_acc: 0.0929\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9805 - acc: 0.0696 - val_loss: 2.9716 - val_acc: 0.0768\n",
       "Epoch-6\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 256s 114ms/step - loss: 2.8574 - acc: 0.0897 - val_loss: 2.8696 - val_acc: 0.1018\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9811 - acc: 0.0656 - val_loss: 2.9642 - val_acc: 0.0875\n",
       "Epoch-7\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 271s 121ms/step - loss: 2.8469 - acc: 0.0991 - val_loss: 2.8237 - val_acc: 0.0982\n",
+      "2240/2240 [==============================] - 207s 92ms/step - loss: 2.9764 - acc: 0.0768 - val_loss: 2.9684 - val_acc: 0.0875\n",
       "Epoch-8\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 267s 119ms/step - loss: 2.8323 - acc: 0.1076 - val_loss: 2.8389 - val_acc: 0.1071\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9690 - acc: 0.0670 - val_loss: 2.9814 - val_acc: 0.0804\n",
       "Epoch-9\n",
       "Train on 2240 samples, validate on 560 samples\n",
       "Epoch 1/1\n",
-      "2240/2240 [==============================] - 268s 120ms/step - loss: 2.8658 - acc: 0.1049 - val_loss: 2.8007 - val_acc: 0.0911\n"
+      "2240/2240 [==============================] - 207s 92ms/step - loss: 2.9708 - acc: 0.0772 - val_loss: 2.9703 - val_acc: 0.0750\n"
      ]
     }
    ],
