--- a/codes/2_adam.ipynb
+++ b/codes/2_adam.ipynb
@@ -9,8 +9,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dhruv\\Anaconda3\\envs\\tensorflow-gpu\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -107,47 +105,38 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      " - 328s - loss: 0.4510 - acc: 0.8691 - val_loss: 2.5181 - val_acc: 0.4604\n",
+      " - 322s - loss: 0.4735 - acc: 0.8589 - val_loss: 2.9960 - val_acc: 0.4646\n",
       "Epoch 2/10\n",
-      " - 322s - loss: 0.0494 - acc: 0.9853 - val_loss: 4.2204 - val_acc: 0.2989\n",
+      " - 318s - loss: 0.0442 - acc: 0.9861 - val_loss: 4.6828 - val_acc: 0.3998\n",
       "Epoch 3/10\n",
-      " - 322s - loss: 0.0485 - acc: 0.9842 - val_loss: 4.3837 - val_acc: 0.3792\n",
+      " - 333s - loss: 0.0272 - acc: 0.9915 - val_loss: 3.0552 - val_acc: 0.5063\n",
       "Epoch 4/10\n",
-      " - 320s - loss: 0.0260 - acc: 0.9919 - val_loss: 3.4473 - val_acc: 0.4846\n",
+      " - 329s - loss: 0.0262 - acc: 0.9916 - val_loss: 3.3867 - val_acc: 0.4403\n",
       "Epoch 5/10\n",
-      " - 320s - loss: 0.0241 - acc: 0.9917 - val_loss: 3.4526 - val_acc: 0.4356\n",
+      " - 328s - loss: 0.0311 - acc: 0.9901 - val_loss: 4.8119 - val_acc: 0.3706\n",
       "Epoch 6/10\n",
-      " - 321s - loss: 0.0187 - acc: 0.9939 - val_loss: 3.9791 - val_acc: 0.4853\n",
+      " - 332s - loss: 0.0246 - acc: 0.9920 - val_loss: 8.5933 - val_acc: 0.2903\n",
       "Epoch 7/10\n",
-      " - 321s - loss: 0.0262 - acc: 0.9915 - val_loss: 5.8566 - val_acc: 0.2898\n",
+      " - 333s - loss: 0.0198 - acc: 0.9937 - val_loss: 10.6545 - val_acc: 0.1400\n",
       "Epoch 8/10\n",
-      " - 322s - loss: 0.0198 - acc: 0.9934 - val_loss: 5.3787 - val_acc: 0.4108\n",
+      " - 331s - loss: 0.0253 - acc: 0.9916 - val_loss: 9.6169 - val_acc: 0.2306\n",
       "Epoch 9/10\n",
-      " - 321s - loss: 0.0226 - acc: 0.9926 - val_loss: 5.9935 - val_acc: 0.3434\n",
+      " - 327s - loss: 0.0264 - acc: 0.9907 - val_loss: 4.0984 - val_acc: 0.4396\n",
       "Epoch 10/10\n",
-      " - 320s - loss: 0.0106 - acc: 0.9965 - val_loss: 4.0006 - val_acc: 0.4797\n"
+      " - 325s - loss: 0.0249 - acc: 0.9916 - val_loss: 4.3236 - val_acc: 0.4696\n"
      ]
     }
    ],
    "source": [
     "history = classifier.fit_generator(train_set,steps_per_epoch=2600,epochs=10,validation_data=test_set,validation_steps=200,callbacks=[csv],verbose=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classifier.save(\"2_adam.h5\")"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:tensorflow]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tensorflow-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
